@@ -41,6 +41,8 @@ Before 1.0 big stuff
 Before 1.0 little stuff
 -----------------------
 
+ o opgprof always merges even if we provide a profile spec that's minimal
+   enough - you can't get "cpu:0"
  o we're not following symlinks for opreport etc. binary resolving
  o is relative_to_absolute_path guaranteeing a trailing '/' documented ?
  o create_path API is weird
