@@ -17,11 +17,11 @@
 #include "popt_options.h"
 #include "cverb.h"
 #include "profile_spec.h"
-#include "partition_files.h"
+#include "arrange_profiles.h"
 
 using namespace std;
 
-scoped_ptr<partition_files> sample_file_partition;
+profile_set profiles;
 
 namespace options {
 	string gmon_filename = "gmon.out";
@@ -41,7 +41,7 @@ popt::option options_array[] = {
 };
 
 
-bool try_partition_file(profile_spec const & spec, bool exclude_dependent)
+bool try_merge_profiles(profile_spec const & spec, bool exclude_dependent)
 {
 	list<string> sample_files = spec.generate_file_list(exclude_dependent);
 
@@ -57,27 +57,43 @@ bool try_partition_file(profile_spec const & spec, bool exclude_dependent)
 	merge_by.tgid = true;
 	merge_by.unitmask = true;
 
-	sample_file_partition.reset(
-		new partition_files(sample_files, merge_by));
+	vector<profile_class> profile_classes
+		= arrange_profiles(sample_files, merge_by);
 
-	if (sample_file_partition->nr_set() > 1) {
-		// FIXME: we can do a lot better in telling the user the
-		// *exact* problem: sample_file_partition::report()
-		// or whatever
-		cerr << "Too many unmerged profile specifications." << endl;
-		cerr << "use event:xxxx and/or count:yyyyy to restrict "
-		     << "samples files considered.\n" << endl;
-		exit(EXIT_FAILURE);
-	}
+	size_t nr_classes = profile_classes.size();
 
-	size_t nr_set = sample_file_partition->nr_set();
-	if (nr_set == 0 && !exclude_dependent) {
+	if (nr_classes == 0 && !exclude_dependent) {
 		cerr << "No samples files found: profile specification too "
 		     << "strict ?" << endl;
 		exit(EXIT_FAILURE);
 	}
 
-	return nr_set == 1;
+	size_t nr_app_profiles = 0;
+	if (nr_classes)
+		nr_app_profiles = profile_classes[0].profiles.size();
+
+	if (nr_classes == 1 && nr_app_profiles == 1) {
+		profiles = *(profile_classes[0].profiles.begin());
+		return true;
+	}
+
+	// come round for another try
+	if (exclude_dependent)
+		return false;
+
+	if (nr_app_profiles > 1) {
+		cerr << "Specify exactly one binary to process." << endl;
+		exit(EXIT_FAILURE);
+	}
+
+	// FIXME: we can do a lot better in telling the user the
+	// *exact* problem based on the profile class templates
+	cerr << "Too many unmerged profile specifications." << endl;
+	cerr << "use event:xxxx and/or count:yyyyy to restrict "
+	     << "samples files considered.\n" << endl;
+	exit(EXIT_FAILURE);
+
+	return false;
 }
 
 }  // anonymous namespace
@@ -93,7 +109,7 @@ void handle_options(vector<string> const & non_options)
 	// we do a first try with exclude-dependent if it fails we include
 	// dependent. First try should catch "opgrof /usr/bin/make" whilst
 	// the second catch "opgprof /lib/libc-2.2.5.so"
-	if (!try_partition_file(spec, true)) {
-		try_partition_file(spec, false);
+	if (!try_merge_profiles(spec, true)) {
+		try_merge_profiles(spec, false);
 	}
 }
